--- a/src/features/filter/filterView.module.css
+++ b/src/features/filter/filterView.module.css
@@ -1,5 +1,5 @@
 .filterContainer {
-    background-color: rgba(255, 255, 255, 0.5);
+    background-color: #ffffff;
     margin: 20px auto 20px auto;
     box-shadow: 1px 1px 1px 1px rgb(183 183 183 / 18%);
     max-width: 600px;
