--- a/src/features/nav/navView.module.css
+++ b/src/features/nav/navView.module.css
@@ -6,6 +6,7 @@
     top: 0;
     z-index: 1;
     border-bottom: 1px solid #cccccc;
+    box-shadow: 1px 1px 1px 1px rgb(183 183 183 / 18%);
 }
 
 .navSubContainer {
@@ -99,6 +100,38 @@
     pointer-events: none;
 }
 
+.goToTop {
+    background-color: #118ae6;
+    width: fit-content;
+    padding: 7px 12px;
+    border-radius: 15px;
+    font-weight: 600;
+    color: white;
+    position: fixed;
+    right: 10%;
+    transform: translate(0px, 85vh);
+    z-index: 1;
+    display: none;
+    cursor: pointer;
+    box-shadow: 1px 1px 1px 1px rgb(183 183 183 / 18%);
+}
+
+.goToTop:hover {
+    background-color: #1076c4;
+    color: rgb(238, 238, 238);
+}
+
+.showGoToTop {
+    display: block;
+    animation: showGoToTopButton 1s ease;
+}
+
+/* A CSS animation that is used to show the "Go to top" button. */
+@keyframes showGoToTopButton {
+    from { opacity: 0;}
+    to {opacity: 1;}
+}
+
 @media screen and (max-width: 1200px) {
     .navMenuContainer {
         display: block;
@@ -151,6 +184,6 @@
 
 /* Highlight selected post START */
 .selectedPost {
-    box-shadow: 0px 0px 3px 3px orangered;
+    box-shadow: 0px 0px 14px orangered;
 }
 /* Highlight selected post END */
