--- a/src/features/filter/filterView.module.css
+++ b/src/features/filter/filterView.module.css
@@ -1,8 +1,8 @@
 .filterContainer {
     background-color: #ffffff;
-    margin: 20px auto 0px auto;
+    margin: 70px 50px 0px 300px;
     box-shadow: 1px 1px 1px 1px rgb(183 183 183 / 18%);
-    max-width: 600px;
+    max-width: 100%;
     height: 50px;
     border-radius: 3px;
     text-align: left;
@@ -20,7 +20,6 @@
 }
 
 .filterItem {
-    /* margin-right: 10px; */
     height: 30px;
     padding: 3px;
     align-self: center;
@@ -66,9 +65,9 @@
     text-decoration: inherit;
 }
 
-@media screen and (min-width: 1081px) and (max-width: 1200px) {
+@media screen and (max-width: 850px) {
     .filterContainer {
-        margin-left: 10%;
+        margin: 70px auto 20px auto;
     }
     
 }
