--- a/src/features/leftSideBar/leftSideBarView.module.css
+++ b/src/features/leftSideBar/leftSideBarView.module.css
@@ -1,18 +1,18 @@
 .leftSideBarContainer {
     background-color: white;
     width: 200px;
-    height: 500px;
-    transform: translate(0px, -52px);
-    border: 1px solid #cccccc;
-    border-radius: 3px;
-    padding: 10px 20px;
-    box-shadow: 1px 1px 1px 1px rgb(183 183 183 / 18%);
+    height: 100vh;
+    top: 0;
+    padding: 10px 20px 50px 20px;
+    position: fixed;
+    overflow: scroll;
 }
 
 .feedsTitle {
     font-size: 0.8rem;
     font-weight: 700;
     color: #808080;
+    margin-top: 70px;
 }
 
 .feedsContainer {
@@ -20,7 +20,6 @@
 }
 
 .feedItem {
-    margin-bottom: 10px;
     color: #333333;
     display: flex;
     align-items: center;
@@ -34,10 +33,20 @@
 
 .activeFeedItem {
     background-color: #e7e7e7;
-    border-radius: 3px;
+    border-top-right-radius: 3px;
+    border-bottom-right-radius: 3px;
+    border-left: 3px solid #ff4500;
 }
 
-@media screen and (max-width: 1200px) {
+.subredditImage {
+    height: 21px;
+    width: auto;
+    border-radius: 10px;
+    margin-right: 10px;
+    border: 1px solid #ff4500;
+}
+
+@media screen and (max-width: 850px) {
     .leftSideBarContainer {
         display: none;
     }
