--- a/src/features/posts/singlePost.module.css
+++ b/src/features/posts/singlePost.module.css
@@ -1,8 +1,8 @@
 .singlePostContainer {
     background-color: rgba(255, 255, 255, 0.5);
-    margin: 20px auto 20px auto;
+    margin: 20px 50px 20px 300px;
     box-shadow: 1px 1px 1px 1px rgb(183 183 183 / 18%);
-    max-width: 600px;
+    max-width: 100%;
     border-radius: 3px;
     text-align: left;
     line-height: 30px;
@@ -103,6 +103,12 @@
     margin-left: 7px;
     font-size: 0.8rem;
     font-weight: 700;
+}
+
+@media screen and (max-width: 850px) {
+    .singlePostContainer {
+        margin: 20px auto 20px auto;
+    }
 }
 
 @media only screen and (max-width: 640px) {
