--- a/src/features/skeletonLoad/skeletonPostView.module.css
+++ b/src/features/skeletonLoad/skeletonPostView.module.css
@@ -1,9 +1,11 @@
 .skeletonContainer {
-    max-width: 580px;
-    margin: 20px auto 20px auto;
+    max-width: 100%;
+    margin: 20px 50px 20px 300px;
     display: flex;
     padding: 10px;
     overflow: hidden;
+    background-color: #ffffff;
+    border: 1px solid #cccccc;
 }
 
 .skeletonPostContainer {
@@ -22,4 +24,16 @@
 
 .skeletonHeader{
     display: flex;
+}
+
+@media screen and (max-width: 850px) {
+    .skeletonContainer {
+        margin: 20px auto 20px auto;
+    }
+}
+
+@media screen and (max-width: 500px) {
+    .skeletonVotesContainer {
+        display: none;
+    }
 }
